# code-similarity-engine

./: .cserc.example  .gitignore  CHANGELOG.md  CONFIG.md  IMPLEMENTATION_NOTES.md  MIGRATION_GUIDE.md  QUICKSTART_CONFIG.md  README.md  pyproject.toml  requirements.txt  test.sh
.cse_cache/models/models--Xenova--all-MiniLM-L6-v2/refs/: main
.cse_cache/models/models--Xenova--all-MiniLM-L6-v2/snapshots/751bff37182d3f1213fa05d7196b954e230abad9/: config.json
docs/: CURRENT_STATUS.md  ROADMAP.md  ROADMAP_UNIVERSAL_LANGUAGE_SUPPORT.md  SPIKE_C_CPP_SUPPORT.md  SPRINT_PHASE2_4.md
src/code_similarity_engine/: __init__.py  __main__.py  analyzer.py  cache.py  cli.py  clusterer.py  config.py  embedder.py  indexer.py  model_manager.py  models.py  reporter.py  reranker.py  state.py
src/code_similarity_engine/languages/: __init__.py  base.py  bash.py  c.py  cpp.py  csharp.py  generic.py  go.py  java.py  javascript.py  kotlin.py  lua.py  php.py  python.py  ruby.py  rust.py  scala.py  swift.py
